--- a/JOUR2053_2021B_assignment_D190301C/content1.html
+++ b/JOUR2053_2021B_assignment_D190301C/content1.html
@@ -56,11 +56,11 @@ https://templatemo.com/tm-551-stand-blog
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Author</a>
+                <a class="nav-link" href="content1.html">Author</a>
               </li>
               
               <li class="nav-item active">
-                <a class="nav-link" href="post-details.html">Diet</a>
+                <a class="nav-link" href="content1.html">Diet</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="content2.html">Workout</a>
