--- a/JOUR2053_2021B_assignment_D190301C/contact.html
+++ b/JOUR2053_2021B_assignment_D190301C/contact.html
@@ -56,7 +56,7 @@ https://templatemo.com/tm-551-stand-blog
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Author</a>
+                <a class="nav-link" href="content5.html">Author</a>
             
               </li>
               <li class="nav-item">
