--- a/JOUR2053_2021B_assignment_D190301C/content3.html
+++ b/JOUR2053_2021B_assignment_D190301C/content3.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
 
-    <title>Stand Blog - Post Details</title>
+    <title>E Fitness - Lifestyle</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@ https://templatemo.com/tm-551-stand-blog
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Author</a>
+                <a class="nav-link" href="Content5.html">Author</a>
               </li>
               
               <li class="nav-item active">
