--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
+    <meta name="description" content="a site to encourage people to have healthy lifestyle">
+    <meta name="author" content="Esther Ching Yong Ting">
+    <meta name="keywords" content="Fitness,nutrition,lifestyle,diet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
 
     <title>E Fitness homepage</title>
