--- a/content5.html
+++ b/content5.html
@@ -150,7 +150,7 @@ https://templatemo.com/tm-551-stand-blog
                       <br><br><h4>Assignment:</h4>
                       Individual Assignment
                       <br><br><h4>Website URL:</h4>
-                      <a rel="nofollow" href="https://github.com/EstherChing/D190301C_INDIVIDUALASSIGNMENT.git" target="_parent">Github Link</a>
+                      <a rel="nofollow" href="https://estherching.github.io/D190301C_INDIVIDUALASSIGNMENT/" target="_parent">Github Link</a>
                       <br><br><h4>Date of submission:</h4>
                       30th August 2021 (Monday)
                       <br><br><h4>Student Name and ID:</h4>
